[package]
name = "raslib"
authors = ["Antonin Hérault <antoninhrlt@proton.me>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Manage Raspberry PI devices with Rust. GPIO ports and direct support for L298N circuit motors"
keywords = ["raspberry", "raspberrypi", "gpio", "l298n", "embedded"]
repository = "https://github.com/antoninhrlt/raslib"
documentation = "https://docs.rs/raslib"

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
